--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "aloha/twilio": "^4.0",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "google/auth": "^1.5",
         "google/cloud": "^0.102.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "moontoast/math": "^1.1",
+        "twilio/sdk": "^5.34"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
