--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-bcmath": "*",
         "aloha/twilio": "^4.0",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "google/auth": "^1.5",
+        "google/cloud-error-reporting": "^0.15.0",
         "google/cloud-kms": "^1.7",
+        "google/cloud-logging": "^1.18",
         "laravel/cashier": "^10.5",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
