--- a/app.yaml
+++ b/app.yaml
@@ -13,6 +13,15 @@ env_variables:
   # Put production environment variables here.
   APP_LOG: errorlog
   APP_KEY: base64:B25yE1A7qIXy7WGKAG+NfMsULWoTjolnL21SSLfNeuE=
+  DB_CONNECTION: mysql
+  DB_SOCKET: '/cloudsql/bodywizard:us-central1:ehr-data'
+  DB_PORT: 3306
+  DB_DATABASE: 'bodywizard_ehr'
+  DB_USERNAME: 'david'
+  DB_PASSWORD: 'b0nerzFTW'
+
+beta_settings:
+  cloud_sql_instances: 'bodywizard:us-central1:ehr-data'
 
 automatic_scaling:
   min_num_instances: 1
