--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "moontoast/math": "^1.1",
+        "predis/predis": "^1.1",
         "twilio/sdk": "^5.34"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
