--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,5 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app','deploy','--project','bodywizard']
+    args: ['config','set','project','bodywizard']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['app','deploy','--no-promote']
