--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,4 +4,8 @@ steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['config','get-value','account']
   - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['config','set','project','bodywizard']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['config','get-value','project']
+  - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app','deploy','--no-promote']
