--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,5 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app','deploy','--no-promote','--project','bodywizard','--impersonate-service-account','full-admin@bodywizard.iam.gserviceaccount.com']
+    args: ['app','deploy','--no-promote','--impersonate-service-account','full-admin@bodywizard.iam.gserviceaccount.com']
+    env: 
+      -'PROJECT=bodywizard'
