--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,9 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app','deploy','--no-promote','--impersonate-service-account','full-admin@bodywizard.iam.gserviceaccount.com']
-    env: 
-      - 'PROJECT=bodywizard'
+    args: ['auth','activate-service-account','--key-file','storage/keys/full-admin-key.json']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['projects','list']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['config','list']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['app','deploy','--no-promote']
