--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
             "php artisan optimize:clear"
         ],
         "post-autoload-dump": [
+            "chmod -R 755 bootstrap\/cache",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
