--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
             "php artisan optimize:clear"
         ],
         "post-autoload-dump": [
-            "chmod -R 755 app\/bootstrap\/cache",
+            "chmod -R 755 \/app\/bootstrap\/cache",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
