cloudbuild.yaml retry fixing bootstrap/cache issue

--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,8 @@
             "php artisan optimize:clear"
         ],
         "post-autoload-dump": [
+            "ls \/app",
+            "ls \/app\/bootstrap",
             "chmod -R 755 \/app\/bootstrap\/cache",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
