--- a/app.yaml
+++ b/app.yaml
@@ -10,8 +10,6 @@ runtime_config:
 env_variables:
   # Put production environment variables here.
   APP_KEY: base64:B25yE1A7qIXy7WGKAG+NfMsULWoTjolnL21SSLfNeuE=
-  APP_ENV: local
-  APP_DEBUG: true
   VIEW_COMPILED_PATH: /tmp
   STORAGE_PATH: /tmp
   DB_CONNECTION: mysql
@@ -28,7 +26,10 @@ env_variables:
 beta_settings:
   cloud_sql_instances: 'bodywizard:us-central1:ehr-data'
 
+resources: 
+  cpu: 2
+
 automatic_scaling:
-  min_num_instances: 1
+  min_num_instances: 2
   cpu_utilization:
     target_utilization: 0.7
