testing new error reporting

--- a/composer.json
+++ b/composer.json
@@ -62,15 +62,15 @@
     "prefer-stable": true,
     "scripts": {
         "post-install-cmd": [
-            "php artisan optimize:clear",
-            "apt-get update",
-            "apt-get install vim"
+            "php artisan optimize:clear"
         ],
         "post-autoload-dump": [
             "mkdir \/app\/bootstrap\/cache",
             "chmod -R 755 \/app\/bootstrap\/cache",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "apt-get update",
+            "apt-get install vim"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
