--- a/package.json
+++ b/package.json
@@ -11,19 +11,30 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.1.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "bootstrap": "^4.5.3",
+        "cross-env": "^5.2.1",
+        "jquery": "^3.5.1",
+        "laravel-mix": "^4.1.4",
+        "lodash": "^4.17.20",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "sass": "^1.27.0",
+        "sass-loader": "^7.3.1",
+        "vue": "^2.6.12",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "include-media": "^1.4.9"
+        "@fullcalendar/core": "^5.3.1",
+        "@fullcalendar/daygrid": "^5.3.2",
+        "@fullcalendar/interaction": "^5.3.1",
+        "@fullcalendar/list": "^5.3.1",
+        "@fullcalendar/moment-timezone": "^5.3.1",
+        "@fullcalendar/rrule": "^5.3.1",
+        "@fullcalendar/timegrid": "^5.3.1",
+        "@fullcalendar/timeline": "^5.3.1",
+        "include-media": "^1.4.9",
+        "moment": "^2.29.1",
+        "moment-timezone": "^0.5.31",
+        "rrule": "^2.6.6"
     }
 }
