--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@fullcalendar/rrule": "^5.3.1",
         "@fullcalendar/timegrid": "^5.3.1",
         "@fullcalendar/timeline": "^5.3.1",
+        "@whoicd/icd11ect": "^1.3.0",
         "include-media": "^1.4.9",
         "luxon": "^1.25.0",
         "rrule": "^2.6.6"
