--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,16 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2.5",
         "ext-bcmath": "*",
-        "ext-stackdriver_debugger": "*",
         "aloha/twilio": "^4.0",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "google/auth": "^1.5",
-        "google/cloud-debugger": "^0.20.0",
-        "google/cloud-error-reporting": "^0.15.0",
-        "google/cloud-kms": "^1.7",
-        "google/cloud-logging": "^1.18",
         "laravel/cashier": "^10.5",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "moontoast/math": "^1.1",
         "pusher/pusher-php-server": "^4.1",
         "twilio/sdk": "^5.34"
@@ -30,8 +26,8 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
