remove heroku script in package.json, add npm install script in composer.json

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
         ],
         "post-install-cmd": [
             "chmod -R 755 bootstrap\/cache",
-            "php artisan cache:clear"
+            "php artisan cache:clear",
+            "npm install && run production"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
