remove all heroku post-build scripts, rm public/app.js & app.css from gitignore

--- a/composer.json
+++ b/composer.json
@@ -62,8 +62,7 @@
         ],
         "post-install-cmd": [
             "chmod -R 755 bootstrap\/cache",
-            "php artisan cache:clear",
-            "npm install && run production"
+            "php artisan cache:clear"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
